# Tichu-Game

./: .gitignore  4clients.sh  CMakeLists.txt  README.md  build.sh  clean.sh  run.sh
sockpp/: .gitignore
src/client/: GameController.cpp  GameController.h  main.cpp
src/client/app/: Tichu.cpp  Tichu.h
src/client/network/: ClientNetworkManager.cpp  ClientNetworkManager.h  ResponseListenerThread.cpp  ResponseListenerThread.h  SignalHandler.cpp  SignalHandler.h
src/client/uiElements/: CardCollectionView.cpp  CardCollectionView.h  CardItem.cpp  CardItem.h
src/client/widgets/: CardSwapView.cpp  CardSwapView.h  CardSwapView.ui  ConnectionView.cpp  ConnectionView.h  ConnectionView.ui  EndGameView.cpp  EndGameView.h  EndGameView.ui  EndRoundView.cpp  EndRoundView.h  EndRoundView.ui  GameView.cpp  GameView.h  GameView.ui  TeamView.cpp  TeamView.h  TeamView.ui
src/common/exceptions/: TichuException.h
src/common/game_state/: CurrentStack.cpp  CurrentStack.h  GameState.cpp  GameState.h  Player.cpp  Player.h  Team.cpp  Team.h
src/common/game_state/CardCollection/: Card.cpp  Card.h  CardCollection.cpp  CardCollection.h  DrawPile.cpp  DrawPile.h  PlayedCombo.cpp  PlayedCombo.h
src/common/network/requests/: award_cards_request.cpp  award_cards_request.h  bomb_request.cpp  bomb_request.h  client_request.cpp  client_request.h  exit_game_request.cpp  exit_game_request.h  get_cards_request.cpp  get_cards_request.h  join_game_request.cpp  join_game_request.h  join_team_request.cpp  join_team_request.h  new_game_request.cpp  new_game_request.h  pass_request.cpp  pass_request.h  play_cards_request.cpp  play_cards_request.h  play_dragon_request.cpp  play_dragon_request.h  start_game_request.h  start_round_request.cpp  start_round_request.h  swap_cards_request.cpp  swap_cards_request.h  tichu_request.cpp  tichu_request.h
src/common/network/responses/: game_state_response.cpp  game_state_response.h  request_response.cpp  request_response.h  server_response.cpp  server_response.h
src/common/serialization/: json_utils.h  unique_serializable.cpp  unique_serializable.h  vector_utils.h
src/server/: AllRequests.hpp  Game.cpp  Game.hpp  GameManager.cpp  GameManager.hpp  PlayerManager.cpp  PlayerManager.hpp  RequestHandler.cpp  RequestHandler.hpp  Server.cpp  Server.hpp  Tichu.code-workspace  dschwarze.hpp  main.cpp  timer.hpp
unit-tests/: CMakeLists.txt  Card.cpp  CardCollection.cpp  CurrentStack.cpp  DrawPile.cpp  GameState.cpp  PlayedCombo.cpp  Player.cpp  Team.cpp  phoenix.cpp
